--- a/style.css
+++ b/style.css
@@ -144,11 +144,11 @@ main {
     margin-bottom: 60px;
 }
 
-
 section h2 {
     margin-bottom: 25px;
     font-size: 22px;
 }
+
 
 .ofertas ul,
 .mais-vendidos ul,
@@ -161,9 +161,11 @@ section h2 {
     list-style: none;
 }
 
+
 .ofertas article,
 .mais-vendidos article,
 .produto-card {
+
     background: linear-gradient(
         180deg,
         #11173a,
@@ -182,20 +184,30 @@ section h2 {
                 box-shadow 0.3s ease;
 }
 
+.ofertas article:hover,
+.mais-vendidos article:hover,
 .produto-card:hover {
+
     transform: translateY(-6px);
 
     box-shadow: 0 15px 40px rgba(0,0,0,0.8);
 }
 
+
+.ofertas article img,
+.mais-vendidos article img,
 .produto-card img {
+
     width: 100%;
-    max-height: 180px;
+    height: 180px;
 
     object-fit: contain;
 
-    margin-bottom: 15px;
+    display: block;
+
+    margin: 0 auto 15px;
 }
+
 
 .produto-card h3 {
     font-size: 16px;
@@ -258,7 +270,6 @@ footer {
     padding: 40px 20px;
 }
 
-
 .footer-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -266,7 +277,6 @@ footer {
     display: flex;
     justify-content: center;
 }
-
 
 .footer-info {
     text-align: center;
@@ -278,12 +288,10 @@ footer {
     gap: 14px;
 }
 
-
 .footer-text {
     font-size: 15px;
     color: #cfd6ff;
 }
-
 
 .footer-devs {
     display: flex;
@@ -322,7 +330,6 @@ footer {
 .footer-link:hover img {
     opacity: 1;
 }
-
 
 .footer-copy {
     font-size: 12px;
